--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install ruff hatch pytest[toml] pytest-cov
+          python -m pip install ruff hatch pytest[toml] pytest-cov types-requests
       - name: Build package
         run: hatch build
       # - name: Test using hatching
