--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,14 @@ ignore = [
   "S105", "S106", "S107",
   # Ignore complexity
   "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+  # Ignore single quotes
+  "Q000",
+  # Ignore magic numbers
+  "PLR2004",
+  # Ignore type annotations
+  "RUF012",
+  # Ignore date formatting preferences
+  "DTZ002",
 ]
 unfixable = [
   # Don't touch unused imports
